# README-God

./: .gitignore  .readme-god.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: README.zh-CN.md
docs/examples/: README.sample.md  README.sample.zh-CN.md
readme_god/: __init__.py  cli.py  generator.py  i18n.py  preview.py  scanner.py  templates.py
readme_god/template_assets/: README.en.j2  README.zh-CN.j2
templates/: README.en.j2  README.zh-CN.j2  preview.html.j2
tests/: test_cli.py  test_generator.py  test_preview.py
